fix authentification